# toy_problems

./: .clang-format
hash_functions/: CMakeLists.txt  README  main.cpp
hash_functions/fnv/: CMakeLists.txt  fnv1a.cpp  fnv1a.h  hash_128a.cpp
hash_functions/fnv/fnv_upstream/: fnv.h  hash_64a.c
hash_functions/sip/: CMakeLists.txt  sip.cpp  sip.h
